Bug 320475 - Legend tab is not working on smallscreen devices
Summary: Legend tab is not working on smallscreen devices
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dennis Nienhüser
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-30 11:18 UTC by Thomas Jarosch
Modified: 2013-06-01 10:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Jarosch 2013-05-30 11:18:14 UTC
Hi,

the legend widget is no longer shown for small screen devices (like the N900).
Likely cause was 5f6ec60c360355fa1098a53a96c6d23b6ac4c2da ("Clean up old widgets and actions")

I tried to fix it but the code is too messy right now.

Things I've observed:
- ControlView::m_legendDock never gets initialized.
  Therefore ControlView::showLegendDock() will never work.
- createDockWigets() never gets called on smallscreen devices anyway
  (recent fix by Bernhard)

The LegendWidget was previously located in MarbleControlBox
but it looks like that class is being phased out? It's not used anymore.

Thomas
Comment 1 Dennis Nienhüser 2013-06-01 10:07:22 UTC
Git commit de4ef0527c7138eb22e1a032f6bd0c615f6365ef by Dennis Nienhüser.
Committed on 01/06/2013 at 12:06.
Pushed by nienhueser into branch 'master'.

Bring back legend on smallscreen.

M  +16   -17   src/ControlView.cpp
M  +0    -3    src/ControlView.h
M  +10   -24   src/QtMainWindow.cpp
M  +1    -4    src/QtMainWindow.h

http://commits.kde.org/marble/de4ef0527c7138eb22e1a032f6bd0c615f6365ef