Bring back legend on smallscreen.

BUG: 320475